--- a/index.html
+++ b/index.html
@@ -900,8 +900,8 @@
             </p>
           </div>
 
-          <form action="index.html">
-            <input type="email" placeholder="E-mail" class="form-input" required>
+          <form class="subscription-form">
+            <input type="email" placeholder="E-mail" class="form-input subscription-input" required>
             <input type="submit" value="Inscreva-se" class="btn">
           </form>
         </div>
