--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>JS DESENVOLVIMENTO WEB</title>
+  <meta name="description" content="JS Desenvimento Web">
+  <meta name="author" content="Jonata Santos">
+  <meta name="keywords" content="HTML, CSS, JavaScript, React, ReactJS, Angular, Apps, Sistemas Web">
+
+  <meta property="og:image" content="https://github.com/jonatafsa.png" />
+  <meta property="og:title" content="JS Desenvimento Web" />
+  <meta property="og:description"
+    content="Sou freelaner, trabalho construindo projetos completos voltados para a web, como por exemplo - sites, aplicações e sistemas;" 
+  />
+  
 
   <!-- _________________ EMAIL TEST _________________ -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.0/dist/email.min.js">
